// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wrapper it should have interactive styles 1`] = `
.c0 {
  line-height: 1.1428571428571428;
  margin: 0px 2px;
  padding: 2px;
  border-radius: 3px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: rgba(9,30,66,0.08);
  cursor: pointer;
}

.c0:hover {
  background-color: rgba(9,30,66,0.13);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active {
  background-color: #DEEBFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  cursor: pointer;
  box-shadow: 0 0 0 2px #4C9AFF;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus,
.c0:focus:hover,
.c0:focus:focus,
.c0:focus:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
  className="c0"
/>
`;

exports[`Wrapper it should have selected styles 1`] = `
.c0 {
  line-height: 1.1428571428571428;
  margin: 0px 2px;
  padding: 2px;
  border-radius: 3px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: rgba(9,30,66,0.08);
  cursor: pointer;
  box-shadow: 0 0 0 2px #4C9AFF;
  outline: none;
}

.c0,
.c0:hover,
.c0:focus,
.c0:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
  className="c0"
/>
`;

exports[`Wrapper it should not have interactive or selected styles 1`] = `
.c0 {
  line-height: 1.1428571428571428;
  margin: 0px 2px;
  padding: 2px;
  border-radius: 3px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: rgba(9,30,66,0.08);
}

<a
  className="c0"
/>
`;
